--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
     <title>Countdown-Timer</title>
 </head>
 <body>
-    <div class="full-timer">
-        <div class="timer">
+    <div id="full-timer" class="full-timer">
+        <div id="timer" class="timer">
             <div>
-                <div class="ticker one">
-                    <p id="number" class="number">01</p>
+                <div id="ticker" class="ticker one">
+                    <p id="days" class="number">01</p>
                     <p>Days</p>
                 </div>
             </div>    
             <div>
-                <div class="ticker two">
-                    <p class="number">12</p>
+                <div id="ticker" class="ticker two">
+                    <p id="hours" class="number">12</p>
                     <p>Hours</p>
                 </div>
             </div>
             <div>
-                <div class="ticker three">
-                    <p class="number">33</p>
+                <div id="ticker" class="ticker three">
+                    <p id="minutes" class="number">33</p>
                     <p>Minutes</p>
                 </div>
             </div>
             <div>
-                <div class="ticker four">
-                    <p class="number">48</p>
+                <div id="ticker" class="ticker four">
+                    <p id="seconds" class="number">48</p>
                     <p>Seconds</p>
                 </div>
             </div>
