--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/398fca0c2c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href=".style.css">
     <title>Countdown-Timer</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
         <a href="#" alt="instagram"><i class="fa-brands fa-square-instagram"></i></a>
     </footer>
 
-    <script src="/index.js" charset="UTF-8">
+    <script src=".index.js" charset="UTF-8">
 
     </script>
 </body>
